# ai-dev

./: README.md
01-todo/: README.md  db.sqlite3
01-todo/templates/: home.html
01-todo/todo_project/: settings.py  urls.py
01-todo/todos/: models.py  tests.py  views.py
01-todo/todos/migrations/: 0001_initial.py
03-mcp/: .gitignore  README.md  main.py  pyproject.toml  solve_search.py  test_count.py  test_scrape.py
templates/: home.html
